@@ -17,7 +17,7 @@
  */
 
 
-/* $Id: php_mssql.h,v 1.43 2005/12/06 01:25:13 sniper Exp $ */
+/* $Id: php_mssql.h,v 1.44 2005/12/21 22:44:04 fmk Exp $ */
 
 #ifndef PHP_MSSQL_H
 #define PHP_MSSQL_H
@@ -158,6 +158,9 @@ ZEND_BEGIN_MODULE_GLOBALS(mssql)
 	zend_bool allow_persistent;
 	char *appname;
 	char *server_message;
+#ifdef HAVE_FREETDS
+	char *charset;
+#endif
 	long min_error_severity, min_message_severity;
 	long cfg_min_error_severity, cfg_min_message_severity;
 	long connect_timeout, timeout;
